# OpenSplit

./: .gitignore  AGENTS.md  DESIGN_SYSTEM.md  docker-compose.yml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260309_0001_initial_schema.py  20260311_0002_add_invite_code_to_groups.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/agents/: llm_client.py  receipt_agent.py
backend/app/agents/rag/: indexer.py  retriever.py
backend/app/models/: __init__.py  base.py  expense.py  group.py  settlement.py  user.py
backend/app/routes/: auth.py  expenses.py  groups.py  settlements.py
backend/app/schemas/: expense.py  group.py  settlement.py  user.py
backend/app/services/: auth_service.py  expense_service.py  group_service.py  settlement_service.py
backend/app/tasks/: celery_app.py  fx_tasks.py  receipt_tasks.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_expenses.py  test_groups.py  test_health.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/: middleware.ts
frontend/src/app/: globals.css  icon.tsx  layout.tsx  page.tsx
frontend/src/components/layout/: dashboard-layout.tsx  index.ts  sidebar.tsx
frontend/src/components/ui/: avatar.tsx  button.tsx  card.tsx  empty-state.tsx  floating-action-button.tsx  (+4 more)
frontend/src/hooks/: useAuth.ts  useGroups.ts
frontend/src/lib/: api.ts  auth.ts
frontend/src/types/: index.ts
(+7 files in other folders)
